--- a/pacific.css
+++ b/pacific.css
@@ -1,1 +1,34 @@
-
+body {
+background-color: #FFFFFF;
+color: #666666;
+font-family: Verdana, Arial, sans-serif;
+}
+#wrapper {
+margin-left: auto;
+margin-right: auto;
+width: 80%;
+}
+header {
+background-color: #002171;
+color: #FFFFFF;
+font-family: Georgia, Serif;
+}
+h1 { line-height: 200%; }
+h2 { color: #1976D2;
+font-family: Georgia, Serif;
+}
+nav { background-color: #BBDEFB;
+font-weight: bold;
+}
+dt { color: #002171;
+font-weight: bold;
+}
+.resort {
+color: #1976D2;
+font-size: 1.2em;
+}
+footer {
+font-size: .70em;
+font-style: italic;
+text-align: center;
+}
