--- a/pacific.css
+++ b/pacific.css
@@ -7,7 +7,7 @@ font-family: Verdana, Arial, sans-serif;
 #wrapper {
 background-color: #FFFFFF;
 background-image: linear-gradient(to bottom, #FFFFFF, #90C7E3);
-background-repeat: no-repeat:
+background-repeat: no-repeat;
 margin-left: auto;
 margin-right: auto;
 width: 80%;
@@ -95,7 +95,7 @@ padding-right: 2em;
 width: 33%;
 }
 footer {
-background-color: #FF;
+background-color: #FFF;
 font-size: .70em;
 font-style: italic;
 margin-left: 170px;
